--- a/.classpath
+++ b/.classpath
@@ -15,5 +15,10 @@
 	<classpathentry kind="con" path="org.eclipse.jst.j2ee.internal.web.container"/>
 	<classpathentry kind="con" path="org.eclipse.jst.j2ee.internal.module.container"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.junit.JUNIT_CONTAINER/4"/>
+	<classpathentry kind="lib" path="/home/sjc/Documents/webapps/lib/commons-lang3-3.3/commons-lang3-3.3.jar">
+		<attributes>
+			<attribute name="javadoc_location" value="jar:file:/home/sjc/Documents/webapps/lib/commons-lang3-3.3/commons-lang3-3.3-javadoc.jar!/"/>
+		</attributes>
+	</classpathentry>
 	<classpathentry kind="output" path="build/classes"/>
 </classpath>
