--- a/.classpath
+++ b/.classpath
@@ -18,6 +18,7 @@
 	<classpathentry exported="true" kind="lib" path="/home/sjc/Documents/webapps/lib/commons-lang3-3.3/commons-lang3-3.3.jar">
 		<attributes>
 			<attribute name="javadoc_location" value="jar:file:/home/sjc/Documents/webapps/lib/commons-lang3-3.3/commons-lang3-3.3-javadoc.jar!/"/>
+			<attribute name="org.eclipse.jst.component.dependency" value="/WEB-INF/lib"/>
 		</attributes>
 	</classpathentry>
 	<classpathentry kind="output" path="build/classes"/>
